--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,7 +203,7 @@ a:hover {
 .card,
 .footer {
 	transition: 0.6s;
-	width: 60%;
+	width: 80%;
 	max-width: 300px;
 }
 .footer {
@@ -242,4 +242,22 @@ a:hover {
 
 .red {
 	background: rgba(255, 0, 0, 0.5);
+}
+
+.info {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: .6rem 1rem;
+	font-size: 0.7rem;
+	color: #cccccc;
+	text-align: center;
+	background: rgba(0, 0, 0, 0.4);
+}
+.info a {
+	color: #888;
+}
+.info a:hover {
+	color: #4eb1ff;
 }
